--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "words",
-  "main": "expo-router/entry",
+  "main": "./index",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -8,16 +8,21 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "triplit:dev": "triplit dev"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "^5.80.10",
+    "@triplit/client": "^1.0.44",
+    "@triplit/react-native": "^1.0.46",
     "expo": "~53.0.11",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.0",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
@@ -40,10 +45,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@tanstack/eslint-plugin-query": "^5.78.0",
+    "@triplit/cli": "^1.0.55",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3",
+    "@ungap/structured-clone": "^1.3.0",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "concurrently": "^9.1.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0"
+    "eslint-config-expo": "~9.2.0",
+    "typescript": "~5.8.3",
+    "uuidv7": "^1.0.2"
   },
   "private": true
 }
